# Gan-baselines

./: README.md  main.py  pyproject.toml
src/configs/: train.yaml
src/configs/dataloader/: dataloader.yaml
src/configs/loss_function/: relativistic_loss.yaml
src/configs/optimizer/: optimizers.yaml
src/configs/writer/: wandb.yaml
src/datasets/: hq_dataset.py
src/model/layers/: __init__.py  generator.py  transformer.py
